--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.2.1",
